--- a/Style/newcss.css
+++ b/Style/newcss.css
@@ -398,7 +398,7 @@ img {
 }
 
 .about__description {
-  text-align: center;
+  text-align: justify;
   margin-bottom: var(--mb-2-5);
 }
 
@@ -1059,7 +1059,7 @@ img {
   }
 
   .about__description {
-    text-align: initial;
+    text-align: justify;
   }
   .about__info {
     justify-content: space-between;
